--- a/MVC_MultitecUA/Views/Proyecto/VistaUsuario/Borrar.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/VistaUsuario/Borrar.cshtml
@@ -4,11 +4,14 @@
     ViewBag.Title = "Borrar";
 }
 
+<br />
 <h2>Borrar el Proyecto: @ViewData["titulo"]</h2>
+<br />
 <p class="text-center">
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Todos los Proyectos", "ProyectosPresentados")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
-<h3>¿Estás seguro de que deseas borrar esto?</h3>
+<br />
+<h3>¿Estás seguro de que deseas borrar este proyecto?</h3>
 <div>
     <hr />
     <dl class="dl-horizontal">
@@ -38,12 +41,13 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Borrar" class="btn btn-default" /> |
-            @Html.ActionLink("Volver", "Detalles", new { id = Model.Id})
+            <input type="submit" value="Borrar" class="btn btn-primary" />
+            @Html.ActionLink("Volver", "Detalles", new { id = Model.Id }, new { @class = "btn btn-default" })
         </div>
     }
 </div>
