--- a/MVC_MultitecUA/Views/Proyecto/VistaUsuario/Crear.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/VistaUsuario/Crear.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h2>Crear Proyecto</h2>
+<br />
 <p class="text-center">
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Todos los Proyectos", "ProyectosPresentados")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
@@ -60,7 +61,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Crear" class="btn btn-default" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
             </div>
         </div>
     </div>
