--- a/MVC_MultitecUA/Views/Proyecto/VistaUsuario/GestionParticipantes.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/VistaUsuario/GestionParticipantes.cshtml
@@ -4,34 +4,37 @@
     ViewBag.Title = "Gestion de Participantes";
 }
 
+<br />
 <h2>Gestion de Participantes de @ViewData["nombre"]</h2>
+<br />
 <p class="text-center">
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Todos los Proyectos", "ProyectosPresentados")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
+<br />
 <div>
     <hr />
     <div class="dl-horizontal">
         @using (Html.BeginForm("AgregarParticipante", "Proyecto"))
         {
             @Html.HiddenFor(model => model.Id)
-            <div class="form-horizontal">
-                <label>Agregar Participante:</label>
-                @Html.DropDownList("Participante", new SelectList((System.Collections.IEnumerable)ViewData["listaUsuariosAgregar"]), new { @class = "form-control" })
-                <input type="submit" value="Agregar" class="btn btn-default" />
+            <div class="form-inline form-group">
+                <label style="min-width:12em;">Agregar Participante:</label>
+                @Html.DropDownList("Participante", new SelectList((System.Collections.IEnumerable)ViewData["listaUsuariosAgregar"]), new { @class = "form-control", style = "min-width:15em;" })
+                <input type="submit" value="Agregar" class="btn btn-default" style="min-width:8em;" />
             </div>
         }
 
         @using (Html.BeginForm("EliminarParticipante", "Proyecto"))
         {
             @Html.HiddenFor(model => model.Id)
-            <div class="form-horizontal">
-                <label>Eliminar Participante:</label>
-                @Html.DropDownList("Participante", new SelectList((System.Collections.IEnumerable)ViewData["listaUsuariosEliminar"]), new { @class = "form-control" })
-                <input type="submit" value="Eliminar" class="btn btn-default" />
+            <div class="form-inline form-group">
+                <label style="min-width:12em;">Eliminar Participante:</label>
+                @Html.DropDownList("Participante", new SelectList((System.Collections.IEnumerable)ViewData["listaUsuariosEliminar"]), new { @class = "form-control", style = "min-width:15em;" })
+                <input type="submit" value="Eliminar" class="btn btn-default" style="min-width:8em;" />
             </div>
         }
     </div>
 </div>
 <p>
-    @Html.ActionLink("Volver", "Detalles", new { id = Model.Id })
+    @Html.ActionLink("Volver", "Detalles", new { id = Model.Id }, new { @class = "btn btn-default" })
 </p>
