--- a/MVC_MultitecUA/Views/Proyecto/VistaUsuario/Modificar.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/VistaUsuario/Modificar.cshtml
@@ -4,14 +4,17 @@
     ViewBag.Title = "Modificar";
 }
 
+<br />
 <h2>Editar Proyecto: @ViewData["titulo"]</h2>
+<br />
 <p class="text-center">
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Todos los Proyectos", "ProyectosPresentados")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
+<br />
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -50,8 +53,8 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Guardar" class="btn btn-default" /> |
-                @Html.ActionLink("Volver", "Detalles", new { id = Model.Id })
+                <input type="submit" value="Guardar" class="btn btn-primary" />
+                @Html.ActionLink("Volver", "Detalles", new { id = Model.Id }, new { @class = "btn btn-default" })
             </div>
         </div>
     </div>
