--- a/MVC_MultitecUA/Views/Proyecto/VistaUsuario/ProyectosPresentados.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/VistaUsuario/ProyectosPresentados.cshtml
@@ -4,10 +4,13 @@
     ViewBag.Title = "Todos los Proyectos";
 }
 
+<br />
 <h2>Listado de todos los Proyectos</h2>
+<br />
 <p class="text-center">
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
+<br />
 <p>
     <h3>Filtros:</h3>
     @using (Html.BeginForm("ForNombre", "Proyecto"))
@@ -16,8 +19,8 @@
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group form-inline">
                 <div class="col-md-10">
-                    <label for="nombre">Nombre: </label><input class="form-control" type="text" name="nombre" />
-                    <input type="submit" value="Filtrar por Nombre" class="btn btn-default" />
+                    <label for="nombre" style="min-width:12em;">Nombre: </label><input class="form-control" type="text" name="nombre" style="min-width:12em;" />
+                    &nbsp;<input type="submit" value="Filtrar por Nombre" class="btn btn-default" style="min-width:15em;" />
                 </div>
             </div>
         </div>
@@ -29,9 +32,9 @@
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group form-inline">
                 <div class="col-md-10">
-                    <label for="nick">Estado: </label>
-                    @Html.DropDownList("estado", new SelectList((System.Collections.IEnumerable)ViewData["listaEstados"]), new { @class = "form-control" })
-                    <input type="submit" value="Filtrar por Estado" class="btn btn-default" />
+                    <label for="nick" style="min-width:12em;">Estado: </label>
+                    @Html.DropDownList("estado", new SelectList((System.Collections.IEnumerable)ViewData["listaEstados"]), new { @class = "form-control", style = "min-width:12em;" })
+                    &nbsp;<input type="submit" value="Filtrar por Estado" class="btn btn-default" style="min-width:15em;" />
                 </div>
             </div>
         </div>
@@ -43,9 +46,9 @@
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group form-inline">
                 <div class="col-md-10">
-                    <label for="nick">Categoría Proyecto: </label>
-                    @Html.DropDownList("categoriaP", new SelectList((System.Collections.IEnumerable)ViewData["listaCategoriasP"]), new { @class = "form-control" })
-                    <input type="submit" value="Filtrar por Categoría Proyecto" class="btn btn-default" />
+                    <label for="nick" style="min-width:12em;">Categoría Proyecto: </label>
+                    @Html.DropDownList("categoriaP", new SelectList((System.Collections.IEnumerable)ViewData["listaCategoriasP"]), new { @class = "form-control", style = "min-width:12em;" })
+                    &nbsp;<input type="submit" value="Filtrar por Categoría Proyecto" class="btn btn-default" style="min-width:15em;" />
                 </div>
             </div>
         </div>
@@ -57,14 +60,18 @@
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group form-inline">
                 <div class="col-md-10">
-                    <label for="nick">Categoría Usuario: </label>
-                    @Html.DropDownList("categoriaU", new SelectList((System.Collections.IEnumerable)ViewData["listaCategoriasU"]), new { @class = "form-control" })
-                    <input type="submit" value="Filtrar por Categoría Usuario" class="btn btn-default" />
+                    <label for="nick" style="min-width:12em;">Categoría Usuario: </label>
+                    @Html.DropDownList("categoriaU", new SelectList((System.Collections.IEnumerable)ViewData["listaCategoriasU"]), new { @class = "form-control", style = "min-width:12em;" })
+                    &nbsp;<input type="submit" value="Filtrar por Categoría Usuario" class="btn btn-default"  style="min-width:15em;"/>
                 </div>
             </div>
         </div>
     }
 </p>
+
+<br />
+
+<!--
 <table class="table">
     <tr>
         <th>
@@ -99,7 +106,46 @@
         </tr>
     }
 
-</table>
+</table>-->
+
+
+
+
+
+
+
+<div class="row">
+    @{foreach (var item in Model)
+        {
+            <div class="col-lg-3 col-sm-6 portfolio-item" style="margin-bottom:1em; min-height:15em;">
+                <div class="card h-100" style="box-shadow:0px 0px 5px 2px #999; min-height:15em;">
+
+                    <center class="card-body">
+                        <h3 class="card-title" style="margin-top:0; margin-bottom:.5em; padding-top:.5em;">
+                            <a href="../Proyecto/Detalles/@Html.DisplayFor(modelItem => item.Id)" style="text-decoration: none;">
+                                @Html.DisplayFor(modelItem => item.Nombre)
+                            </a>
+                        </h3>
+                        <p class="card-text" style="height:5em; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">@Html.DisplayFor(modelItem => item.Descripcion)</p>
+                        <p class="card-text"><b>Estado: </b>@Html.DisplayFor(modelItem => item.Estado)</p>
+                        @Html.ActionLink("Eventos", "porProyecto", "Evento", new { id = item.Id }, new { @class = "btn btn-success" })
+                        <br />
+                        <br />
+                    </center>
+                </div>
+            </div>
+        }
+
+    }
+</div>
+
+
+
+
+
+
+
+
 
 @if (ViewData["pag"] != null)
 {
