--- a/MVC_MultitecUA/Views/Usuario/Create.cshtml
+++ b/MVC_MultitecUA/Views/Usuario/Create.cshtml
@@ -10,34 +10,58 @@
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Usuarios", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "Usuario", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
+
+        @{ if (ViewData.ContainsKey("CamposVacios"))
+            {
+                <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> @ViewData["CamposVacios"]</p>
+            }
+            else if (ViewData.ContainsKey("error"))
+            {
+                <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> @ViewData["error"]</p>
+            }
+            else
+            {
+                <br />
+            }
+        }
+
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
+                @{ if (ViewData.ContainsKey("FormatoNombreUsuario"))
+                    {
+                        <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> Hasta 50 caracteres. Solo letras y espacios.</p>
+                    }
+                }
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @type="password", @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @type = "password", @class = "form-control" } })
+                @{ if (ViewData.ContainsKey("FormatoContrasenaUsuario"))
+                    {
+                        <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> @ViewData["FormatoContrasenaUsuario"]</p>
+                    }
+                }
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Foto, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Foto, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Foto, "", new { @class = "text-danger" })
+                <div class="col-md-10">
+                    <input class=" text-box single-line" id="file" name="file" type="file" value="" />
+                </div>
             </div>
         </div>
 
@@ -45,7 +69,11 @@
             @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                @{ if (ViewData.ContainsKey("FormatoEmailUsuario"))
+                    {
+                        <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> @ViewData["FormatoEmailUsuario"]</p>
+                    }
+                }
             </div>
         </div>
 
@@ -53,7 +81,15 @@
             @Html.LabelFor(model => model.Nick, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Nick, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nick, "", new { @class = "text-danger" })
+                @{ if (ViewData.ContainsKey("FormatoNickUsuario"))
+                    {
+                        <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> @ViewData["FormatoNickUsuario"]</p>
+                    }
+                    else if (ViewData.ContainsKey("NickExiste"))
+                    {
+                        <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span>  @ViewData["NickExiste"]</p>
+                    }
+                }
             </div>
         </div>
 
