--- a/MVC_MultitecUA/Views/Usuario/VistaUsuario/Detalles.cshtml
+++ b/MVC_MultitecUA/Views/Usuario/VistaUsuario/Detalles.cshtml
@@ -4,10 +4,25 @@
     ViewBag.Title = "Detalles";
 }
 
-<h2>Detalles del Usuario: @Model.Nick</h2>
-<p class="text-center">
-    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Lista de Usuarios", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
-</p>
+@{
+    if (TempData.ContainsKey("Modificar"))
+    {
+        <br />
+        <center><h1 class="text-success"><span class="glyphicon glyphicon-check"></span> @TempData["Modificar"]</h1></center>
+        <br />
+    }
+    else
+    {
+        <br />
+        <p class="text-center">
+            <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Lista de Usuarios", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
+        </p>
+        <br />
+
+    }
+}
+
+<!--
 <div>
     <hr />
     <dl class="dl-horizontal">
@@ -24,7 +39,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Foto)
+            <img src="@Html.DisplayFor(model => model.Foto)" alt="Foto usuario" name="file" style="width:25%;" />
         </dd>
 
         <dt>
@@ -75,19 +90,84 @@
     </dl>
 </div>
 <div>
-    @if (Session["usuario"] != null)
+    if (Session["usuario"] != null)
     {
 
         if (Session["usuario"].ToString() != Model.Nick)
         {
-            @Html.ActionLink("Mandar mensaje", "Crear", "Mensaje", new { id = Model.Id }, null)
+            Html.ActionLink("Mandar mensaje", "Crear", "Mensaje", new { id = Model.Id }, null)
         }
         else
         {
-            @Html.ActionLink("Modificar perfil", "Modificar")
+            Html.ActionLink("Modificar perfil", "Modificar")
         }
         <span>|</span>
     }
 
-    @Html.ActionLink("Volver a la lista", "Index")
+    Html.ActionLink("Volver a la lista", "Index")
+</div> -->
+
+
+
+
+
+
+
+
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12 ">
+
+            <h1 class="mt-4" style="margin:0; text-align:center;">@Html.DisplayFor(model => model.Nick)</h1>
+            <br />
+
+            <center>
+
+                <img src="@Html.DisplayFor(model=>model.Foto)" alt="(Foto del usuario)" style="max-width:25%;">
+
+                <br />
+                <br />
+                <h4><b>Nombre: </b>@Html.DisplayFor(model => model.Nombre)</h4>
+                <h4><b>Email: </b>@Html.DisplayFor(model => model.Email)</h4>
+                <p><b>Fecha de alta: </b>@Html.DisplayFor(model => model.FechaAlta)</p>
+                <label style="border:1px solid black; padding:.75em; border-radius:1em; background-color:Highlight; color:white">@Html.DisplayFor(model => model.Rol)</label>
+            </center>
+            <br />
+            <div style="text-align:center;">
+
+                <b>Categorías</b> <ul style="text-align:center; margin-right:1.5em;">
+                    @{
+                        foreach (string categoria in (System.Collections.ArrayList)ViewData["listaCategoriasEliminar"])
+                        {
+                            <li>@categoria</li>
+                        }
+                    }
+                </ul>
+            </div>
+            <br />
+
+
+            <center class="form-inline">
+                @if (Session["usuario"] != null)
+                {
+
+                    if (Session["usuario"].ToString() != Model.Nick)
+                    {
+                        @Html.ActionLink("Mandar mensaje", "Crear", "Mensaje", new { id = Model.Id }, new { @class = "btn btn-info" })
+                    }
+                    else
+                    {
+                        @Html.ActionLink("Modificar perfil", "Modificar",null, new { @class = "btn btn-info" })
+                    }
+                }
+                &nbsp;
+                @Html.ActionLink("Volver", "Index","Usuario",null, new { @class="btn btn-default"})
+            </center>
+
+            <br />
+
+        </div>
+
+    </div>
+
 </div>
