--- a/MVC_MultitecUA/Views/Usuario/VistaUsuario/Listado.cshtml
+++ b/MVC_MultitecUA/Views/Usuario/VistaUsuario/Listado.cshtml
@@ -4,10 +4,13 @@
     ViewBag.Title = "Listado de Usuarios";
 }
 
+<br />
 <h2>Listado de miembros de la Asociación</h2>
+<br />
 <p class="text-center">
-	<label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@ViewBag.Title</label>
+    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
+<br />
 <p>
     <h3>Filtros:</h3>
     @using (Html.BeginForm("ForNick", "Usuario"))
@@ -16,8 +19,8 @@
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group form-inline">
                 <div class="col-md-10">
-                    <label for="nick">Nick:&nbsp;&nbsp;&nbsp;</label><input class="form-control" type="text" name="nick" />
-                    &nbsp;&nbsp;<input type="submit" value="Filtrar por Nick" class="btn btn-default" />
+                    <label for="nick" style="min-width:8em;">Nick:&nbsp;&nbsp;&nbsp;</label><input class="form-control" type="text" name="nick" />
+                    &nbsp;&nbsp;<input type="submit" value="Filtrar por Nick" class="btn btn-default" style="min-width:12em;" />
                 </div>
             </div>
         </div>
@@ -29,9 +32,9 @@
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group form-inline">
                 <div class="col-md-10">
-                    <label for="rol">Rol:&nbsp;&nbsp;&nbsp;&nbsp;</label>
-                    @Html.DropDownList("rol", new SelectList((System.Collections.IEnumerable)ViewData["listaRoles"]), new { @class = "form-control" })
-                    &nbsp;&nbsp;<input type="submit" value="Filtrar por Rol" class="btn btn-default" />
+                    <label for="rol" style="min-width:8em;">Rol:&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                    @Html.DropDownList("rol", new SelectList((System.Collections.IEnumerable)ViewData["listaRoles"]), new { @class = "form-control", style = "min-width:12em;" })
+                    &nbsp;&nbsp;<input type="submit" value="Filtrar por Rol" class="btn btn-default" style="min-width:12em;" />
                 </div>
             </div>
         </div>
@@ -43,14 +46,17 @@
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group form-inline">
                 <div class="col-md-10">
-                    <label for="categoria">Categoría:&nbsp;&nbsp;&nbsp;&nbsp;</label>
-                    @Html.DropDownList("categoria", new SelectList((System.Collections.IEnumerable)ViewData["listaCategoriasUsuarios"]), new { @class = "form-control" })
-                    &nbsp;&nbsp;<input type="submit" value="Filtrar por Categoría" class="btn btn-default" />
+                    <label for="categoria" style="min-width:8em;">Categoría:&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                    @Html.DropDownList("categoria", new SelectList((System.Collections.IEnumerable)ViewData["listaCategoriasUsuarios"]), new { @class = "form-control", style = "min-width:12em;" })
+                    &nbsp;&nbsp;<input type="submit" value="Filtrar por Categoría" class="btn btn-default" style="min-width:12em;" />
                 </div>
             </div>
         </div>
-    }    
+    }
 </p>
+
+<br />
+<!--
 <table class="table">
     <tr>
         <th>
@@ -73,8 +79,8 @@
         </th>
     </tr>
 
-	@foreach (var item in Model)
-	{
+    @foreach (var item in Model)
+    {
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Nombre)
@@ -95,48 +101,80 @@
             @Html.ActionLink("Proyectos", "MisProyectos", "Proyecto", new { nick = item.Nick }, null)
         </td>
     </tr>
-	}
+    }
 
-</table>
+</table> -->
+
+
+<div class="row">
+    @{foreach (var item in Model)
+        {
+            <center class="col-lg-3 col-sm-6 portfolio-item" style="margin-bottom:2em;">
+                <div class="card h-100" style="box-shadow:0px 0px 5px 2px #999;">
+                    <a href="../Usuario/Detalles?nick=@Html.DisplayFor(modelItem => item.Nick)"><img class="card-img-top" style="width:50%;" src="@item.Foto" alt="Foto del usuario @Html.DisplayFor(modelItem=>item.Nick)"></a>
+                    <div class="card-body">
+                        <h3 class="card-title" style="margin-top:0; padding-top:.5em;">
+                            <a href="../Usuario/Detalles?nick=@Html.DisplayFor(modelItem => item.Nick)">@Html.DisplayFor(modelItem=>item.Nick)</a>
+                        </h3>
+                        <p class="card-text"><b>Nombre: </b>@Html.DisplayFor(modelItem => item.Nombre)</p>
+                        <p class="card-text"><b>Email: </b>@Html.DisplayFor(modelItem => item.Email)</p>
+                        <hr style="margin:0; padding:0" />
+                        <p style="margin:0; padding:.25em;">@Html.DisplayFor(modelItem => item.Rol)</p>
+                        <hr style="margin:0; padding:0" />
+                        <br />
+                        @Html.ActionLink("Participa en los proyectos", "MisProyectos", "Proyecto", new { nick = item.Nick }, new { style = "color: black", @class = "btn btn-success" })
+                        <br />
+                        <br />
+                    </div>
+                </div>
+            </center>
+        }
+
+    }
+</div>
+
+
+
+
 
 @{
-	/* La página que me llega del controlador es una unidad menos de lo que muestro por pantalla (la 0 es la 1) */
-	var siguiente = (int)ViewData["pag"] + 1;
-	var anterior = siguiente - 2;
-	var numPags = (int)ViewData["numeroPaginas"] + 1;
+    /* La página que me llega del controlador es una unidad menos de lo que muestro por pantalla (la 0 es la 1) */
+    var siguiente = (int)ViewData["pag"] + 1;
+    var anterior = siguiente - 2;
+    var numPags = (int)ViewData["numeroPaginas"] + 1;
 }
 <p class="text-center">
-	@{
-		if (siguiente > 1)
-		{
-			<label>@Html.ActionLink("Primera", "Index", new { pag = 0 })</label>
-			<span>|</span>
-			<label>@Html.ActionLink("Anterior", "Index", new { pag = anterior })</label>
-		}
-		else
-		{
-			<span>Primera</span>
-			<span>|</span>
-			<span>Anterior</span>
-		}
-	}
+    @{
+        if (siguiente > 1)
+        {
+            <label>@Html.ActionLink("Primera", "Index", new { pag = 0 })</label>
+            <span>|</span>
+            <label>@Html.ActionLink("Anterior", "Index", new { pag = anterior })</label>
+        }
+        else
+        {
+            <span>Primera</span>
+            <span>|</span>
+            <span>Anterior</span>
+        }
+    }
 
-	<span>|</span>
-	<label>Página @siguiente de @numPags</label>
-	<span>|</span>
+    <span>|</span>
+    <label>Página @siguiente de @numPags</label>
+    <span>|</span>
 
-	@{
-		if (siguiente < numPags)
-		{
-			<label>@Html.ActionLink("Siguiente", "Index", new { pag = siguiente })</label>
-			<span>|</span>
-			<label>@Html.ActionLink("Última", "Index", new { pag = numPags - 1 })</label>
-		}
-		else
-		{
-			<span>Siguiente</span>
-			<span>|</span>
-			<span>Última</span>
-		}
-	}
+    @{
+        if (siguiente < numPags)
+        {
+            <label>@Html.ActionLink("Siguiente", "Index", new { pag = siguiente })</label>
+            <span>|</span>
+            <label>@Html.ActionLink("Última", "Index", new { pag = numPags - 1 })</label>
+        }
+        else
+        {
+            <span>Siguiente</span>
+            <span>|</span>
+            <span>Última</span>
+        }
+    }
 </p>
