--- a/MVC_MultitecUA/Views/Noticia/VistaUsuario/Noticia.cshtml
+++ b/MVC_MultitecUA/Views/Noticia/VistaUsuario/Noticia.cshtml
@@ -27,7 +27,7 @@
                     <br />
                     <br />
                     <br />
-                    <pre style="text-align:justify; margin: 0 5em; padding:0 3em;">@Html.DisplayFor(model => model.Cuerpo)</pre>
+                    <pre style="text-align:justify; margin: 0 5em; padding:0 3em;">@Html.Raw(Model.Cuerpo)</pre>
                 </center>
 
             </div>
